# sf-user-object-access

./: .gitignore  LICENSE  README.md  pyproject.toml
src/sf_user_object_access/: __init__.py  __main__.py  cli.py  core.py
tests/: test_core.py
